chore: clean some things up and remove warnings